@@ -49,7 +49,7 @@ unless( $threads::shared::threads_shared ) {
 
 WriteMakefile( 
       'NAME'           => 'Astro::Aladin',
-      'VERSION'        => '2.0.1',
+      'VERSION'        => '2.0.2',
       'PREREQ_PM'      => { threads => 0.0.5,
                             threads::shared => 0.90 },
       'dist'           => { COMPRESS => "gzip -9f"},
