@@ -5,7 +5,14 @@ use strict;
 
 #load test
 use Test;
-BEGIN { plan tests => 1 };
+BEGIN { plan tests => 2 };
+
+unless ( defined $ENV{ALADIN_JAR} ) {
+  for (1..2) {
+    skip("Skiping environment variable \$ALADIN_JAR not defined", 1);
+  }
+  exit;
+}
 
 # load modules
 use Astro::Aladin::LowLevel;
@@ -23,7 +30,7 @@ my $aladin = new Astro::Aladin::LowLevel( );
 $aladin->get( "SSS.cat", [""], "15 16 06.9 -60 57 26.1", "2arcmin" );
 $aladin->status();
 $aladin->sync();
-$aladin->status();
+ok( $aladin->status() );
 $aladin->close();
 
 #$aladin->get( "Aladin", ["DSS1"], "M8"  );
